# unixpwd

./: .gitignore  LICENSE  Makefile  README.md  dune-project  opasswd.c  pwd.ml  unixpwd.opam
c/: Makefile  dune  main.c  unixpwd.c  unixpwd.h  unixpwd_stubs.c
src/: Makefile  dune  main.c  stubs.ml  unixpwd.ml  unixpwd.mli  unixpwd_stub.c
test/: dune  main.ml
