opam-version:   "1.2"
name:           "unixpwd"
version:        "1.0"
maintainer:     "xen-api@lists.xen.org"
authors:        [ "xen-api@lists.xen.org" ]
homepage:       "https://github.com/xapi-project/unixpwd"
bug-reports:    "https://github.com/xapi-project/unixpwd/issues"
license:        "MIT"
dev-repo:       "https://github.com/xapi-project/unixpwd.git"
build: [
  ["dune" "build" "-j" jobs "@install"]
]
depends: [
  "dune"    {build}
]

